InProgress #16023 - [Feature] Formulate labelClaim value

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
@@ -369,6 +369,7 @@ message.formulate.info.nut.notInRangeValue.GdaPerc    = The nutrient {0} (% RI p
 message.formulate.info.nut.notInRangeValue.Serving    = The nutrient {0} (1 serving value: {1}) is in specification range ({2}expected value{3})
 message.formulate.info.physicoChem.notInRangeValue    = The characteristic {0} (value: {1}) is in specifications range ({2}expected value{3})
 message.formulate.ingredient.forbidden                = An ingredient ({0}) is forbidden by the product specifications
+message.formulate.labelClaim.certifiedError           = The claim ''{0}'' has a percentage value ({1}) below the regulatory threshold ({2}) and should not be certified.
 message.formulate.labelClaim.error                    = Error formulating label claim ''{0}'': - {1}
 message.formulate.labelClaim.missing                  = Claim ''{0}'' missing
 message.formulate.labelClaim.notClaimed               = Label ''{0}'' must be {1}
