Fix #14498 - [Bug] Use product mode for physico and cost missing characts

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
@@ -29,6 +29,7 @@ beCPG.formulation.ingsCalculatingWithYield.description         = Allows you to s
 beCPG.formulation.nutList.propagateUpEnable.description        = Allows you to define whether the nutrients propagate from the composition
 beCPG.formulation.score.nutriscore.regulatoryClass.description = Allows you to specify the Java class used for calculating the nutrient score
 beCPG.formulation.security.enforceACL                          = Allows you to define whether security rules should apply access rights to lists when formulating
+beCPG.formulation.security.forceResetACL                        = Forces security rules to reset all permissions even if enforceACL is disabled
 beCPG.formulation.specification.addInfoReqCtrl.description     = Allows you to specify whether informational type specification requirements should be added to the product
 beCPG.multilinguale.disabledMLTextFields.description           = Allows you to deactivate multilanguages \u200B\u200Bfor certain fields. You can specify the relevant fields by separating them with commas
 beCPG.multilinguale.disabledMLTextFields.readonly              = true
