Fix #14498 - [Bug] Use product mode for physico and cost missing characts

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -46,6 +46,7 @@ beCPG.formulation.specification.cron=0 0 23 * * ?
 beCPG.formulation.reqCtrlList.maxRclSourcesToKeep=-1
 beCPG.formulation.reqCtrlList.addChildRclSources=true
 beCPG.formulation.security.enforceACL=false
+beCPG.formulation.security.forceResetACL=false
 
 #Security
 beCPG.security.supplierPermission=Coordinator
@@ -109,7 +110,7 @@ beCPG.glop.serverUrl=http://becpg-ai/api/glop/compute
 beCPG.connector.channel.register.activity=false
 
 #Batches
-becpg.batch.automaticECO.reformulateChangedEntities.workerThreads=2
+becpg.batch.automaticECO.reformulateChangedEntities.workerThreads=1
 becpg.batch.automaticECO.reformulateChangedEntities.batchSize=1
 
 becpg.batch.automaticECO.autoMergeBranch.workerThreads=3
