Fix #28700 - [Bug] Fix toxicology formulation

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/batches.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/batches.properties
@@ -2,6 +2,7 @@
 becpg.batch.activity.cleanActivities                = Cleaning activities
 becpg.batch.automaticECO.autoMergeBranch            = Auto-merging branches
 becpg.batch.automaticECO.reformulateChangedEntities = Reformulation of changed entities
+becpg.batch.deleteToxIng                            = Delete ingredient toxicologies
 becpg.batch.eco.apply                               = Application of change order {0}
 becpg.batch.eco.calculateWUsed                      = Calculation of where used entities {0}
 becpg.batch.eco.close                               = Closing of change order {0}
@@ -20,5 +21,10 @@ becpg.batch.entityTpl.synchronizeEntities           = Synchronizing template ent
 becpg.batch.entityUnarchiving                       = Unarchiving entity {0}
 becpg.batch.entityVersion.generateReports           = Generating version reports {0}
 becpg.batch.import                                  = Importing file ''{0}''
+
+becpg.batch.productSpecification.formulation        = Formulation of product specification: {0}
+becpg.batch.updateOrCreateToxIng                    = Create ingredient toxicologies
+becpg.batch.updateToxIng                            = Update ingredient toxicologies
+
 becpg.batch.versionCleaner.cleanOrphanVersions      = Cleaning orphan versions
 becpg.batch.versionCleaner.cleanVersions            = Cleaning versions
