Fix #28251 - [Feature] Added logisticUnit in catalog dashlet

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/dashlets/product-catalog.get.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/dashlets/product-catalog.get.properties
@@ -31,6 +31,7 @@ header = Product catalog
 type.client                  = Client
 type.ecm_changeOrder         = Change order
 type.finishedProduct         = Finished product
+type.logisticUnit			 = Logistic unit
 type.packagingKit            = Packaging kit
 type.packagingMaterial       = Packaging material
 type.product                 = Product
