--- a/becpg-integration-runner/pom.xml
+++ b/becpg-integration-runner/pom.xml
@@ -14,7 +14,7 @@
 		<version>23.2.2</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.2.2.57</version>
+    <version>23.2.2.58-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>fr.becpg</groupId>
