Fix #28257 - [Feature] Add LabeledServing, LabeledAsPrepared ... in nut requirement scanner

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -30,15 +30,15 @@ bcpg_bcpgmodel.aspect.bcpg_productTypeAspect.description                        
 bcpg_bcpgmodel.aspect.bcpg_productTypeAspect.title                              = Product type
 bcpg_bcpgmodel.aspect.bcpg_profitabilityAspect.description                      = Profitability of the product
 bcpg_bcpgmodel.aspect.bcpg_profitabilityAspect.title                            = Product - profitability
-bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.description                    = Reconstitutable Aspect
-bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.title                          = Reconstitutable Aspect
+bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.description                    = Reconstitutable aspect
+bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.title                          = Reconstitutable aspect
 bcpg_bcpgmodel.aspect.bcpg_regulatoryAspect.title                               = Regulatory aspect
 bcpg_bcpgmodel.aspect.bcpg_regulatoryCodeAspect.title                           = Regulatory code aspect
 bcpg_bcpgmodel.aspect.bcpg_supplierAspect.description                           = Supplier
 bcpg_bcpgmodel.aspect.bcpg_supplierAspect.title                                 = Supplier
 bcpg_bcpgmodel.aspect.bcpg_suppliersAspect.description                          = For products purchased from a supplier
 bcpg_bcpgmodel.aspect.bcpg_suppliersAspect.title                                = Suppliers
-bcpg_bcpgmodel.aspect.bcpg_svhcAspect.title                                     = Substances of very high concerns
+bcpg_bcpgmodel.aspect.bcpg_svhcAspect.title                                     = Dangerous substances
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.description                     = Transformation aspect
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.title                           = Transformation aspect
 bcpg_bcpgmodel.aspect.bcpg_undeletableAspect.description                        = Undeletable aspect
@@ -73,8 +73,8 @@ bcpg_bcpgmodel.association.bcpg_contacts.title                                  
 bcpg_bcpgmodel.association.bcpg_costListComponent.title                         = Component
 bcpg_bcpgmodel.association.bcpg_costListCost.title                              = Cost
 bcpg_bcpgmodel.association.bcpg_cstsCodeCountry.title                           = Countries 
-bcpg_bcpgmodel.association.bcpg_customsCodeRef.description                      = Customs codes
-bcpg_bcpgmodel.association.bcpg_customsCodeRef.title                            = Customs codes
+bcpg_bcpgmodel.association.bcpg_customsCodeRef.description                      = Customs code
+bcpg_bcpgmodel.association.bcpg_customsCodeRef.title                            = Customs code
 bcpg_bcpgmodel.association.bcpg_diluentRef.title                                = Diluent
 bcpg_bcpgmodel.association.bcpg_filBioOrigins.title                             = Biology origins
 bcpg_bcpgmodel.association.bcpg_filGeoOrigins.title                             = Geographical origins
@@ -133,8 +133,8 @@ bcpg_bcpgmodel.association.bcpg_regulatoryUsageRef.title                        
 bcpg_bcpgmodel.association.bcpg_specCompatibilityTpls.title                     = Compatibility criteria
 bcpg_bcpgmodel.association.bcpg_storageConditionsRef.title                      = Storage conditions
 bcpg_bcpgmodel.association.bcpg_subsidiaryCertifications.title                  = Certifications
-bcpg_bcpgmodel.association.bcpg_subsidiaryRef.description                       = Subsidiaries
-bcpg_bcpgmodel.association.bcpg_subsidiaryRef.title                             = Subsidiaries
+bcpg_bcpgmodel.association.bcpg_subsidiaryRef.description                       = Subsidiary
+bcpg_bcpgmodel.association.bcpg_subsidiaryRef.title                             = Subsidiary
 bcpg_bcpgmodel.association.bcpg_supplierAccountRef.title                        = Supplier accounts
 bcpg_bcpgmodel.association.bcpg_supplierPlants.title                            = Supplier plants
 bcpg_bcpgmodel.association.bcpg_suppliers.title                                 = Suppliers
@@ -616,7 +616,7 @@ bcpg_bcpgmodel.type.bcpg_ingLabelingList.title                                  
 bcpg_bcpgmodel.type.bcpg_ingList.description                                    = List of ingredients
 bcpg_bcpgmodel.type.bcpg_ingList.title                                          = Ingredients
 bcpg_bcpgmodel.type.bcpg_ingRegulatoryList.description                          = Ingredients regulatory compliance list
-bcpg_bcpgmodel.type.bcpg_ingRegulatoryList.title                                = Ingredients compliance
+bcpg_bcpgmodel.type.bcpg_ingRegulatoryList.title                                = Ingredients compliance 
 bcpg_bcpgmodel.type.bcpg_ingType.title                                          = Ingredient type
 bcpg_bcpgmodel.type.bcpg_ingTypeItem.description                                = Types of ingredients (administration)
 bcpg_bcpgmodel.type.bcpg_ingTypeItem.title                                      = Ingredient type
@@ -791,6 +791,12 @@ listconstraint.bcpg_nutListMeasurementPrecisions.LessThan             = Less Tha
 listconstraint.bcpg_nutListRequirementTypes.AsPrepared                = Prepared value
 listconstraint.bcpg_nutListRequirementTypes.GdaPerc                   = % RI per portion
 listconstraint.bcpg_nutListRequirementTypes.Serving                   = 1 serving
+listconstraint.bcpg_nutListRequirementTypes.LabeledServing            = Labeled serving
+listconstraint.bcpg_nutListRequirementTypes.LabeledAsPrepared         = Labeled prepared value
+listconstraint.bcpg_nutListRequirementTypes.LabeledGdaPerc            = % RI per labeled serving
+listconstraint.bcpg_nutListRequirementTypes.LabeledValue               = Labeled value
+listconstraint.bcpg_nutListRequirementTypes.LabeledAsPreparedServing   = Labeled prepared value per serving
+listconstraint.bcpg_nutListRequirementTypes.AsPreparedServing          = Prepared value per serving
 listconstraint.bcpg_nutrientPreparationStates.Prepared                = Prepared
 listconstraint.bcpg_nutrientPreparationStates.Unprepared              = Unprepared
 listconstraint.bcpg_packagingLevel.Primary                            = Primary
