--- a/becpg-designer/becpg-designer-share/pom.xml
+++ b/becpg-designer/becpg-designer-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.1</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>23.4.1.25-SNAPSHOT</version>
+    <version>23.4.1.25</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-designer-share</artifactId>
 	<packaging>jar</packaging>
@@ -61,6 +61,6 @@
 	</dependencies>
 
   <scm>
-    <tag>23.4.1.24</tag>
+    <tag>23.4.1.25</tag>
   </scm>
 </project>
