--- a/becpg-plm/becpg-plm-core/pom.xml
+++ b/becpg-plm/becpg-plm-core/pom.xml
@@ -6,7 +6,7 @@
 	    <version>23.4.1</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>23.4.1.25</version>
+    <version>23.4.1.26-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-core</artifactId>
 	<packaging>jar</packaging>
