Fix #27160 - [Feature] Add SurveyListRequirementScanner for productSpecification

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
@@ -349,6 +349,8 @@ message.decernis.ingredient.severalRid                = Several RIDs found for t
 message.formulate.allergen.error.empty                = Allergen not specified
 message.formulate.allergen.error.nullQtyPerc          = Cannot formulate allergen percent {0}.
 message.formulate.allergen.forbidden                  = Forbidden allergen: {0}.
+message.formulate.survey.incorrect.answer               = Incorrect answer for question: {0}.
+message.formulate.survey.missing.choice                = Missing choice for question: {0}.
 message.formulate.allergen.notValidated               = Allergens not validated
 message.formulate.clp.forbidden                       = Forbidden classification: {0}.
 message.formulate.comparewith.formulate.entity.error  = Cannot formulate entity to compare with: {0}
