--- a/becpg-share/pom.xml
+++ b/becpg-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.2</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.4.2.20</version>
+    <version>23.4.2.21-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-share</artifactId>
 	<packaging>jar</packaging>
@@ -83,6 +83,6 @@
 
 
   <scm>
-    <tag>23.4.2.20</tag>
+    <tag>23.4.2.19</tag>
   </scm>
 </project>
