Fix #26958 - [Bug] Limit bulk-edit to 50 items max

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -189,6 +189,7 @@ message.createSupplier.failure                = You do not have the rights to pe
 message.createSupplier.success                = User '{0}' associated to supplier
 message.delete-content.failure                = Error deleting content
 message.delete-content.success                = Content deleted with success
+message.too.many.items                        = Too many items selected ({0}). Please select 50 or fewer items.
 message.delete.please-wait                    = Please wait. Entity being deleted...
 message.email.notValide                       = Please enter a valid email address.
 message.formulate-entities.failure            = Could not formulate entities
