[Setup] Sonar fix

--- a/becpg-plm/becpg-plm-core/pom.xml
+++ b/becpg-plm/becpg-plm-core/pom.xml
@@ -47,7 +47,7 @@
 			<artifactId>becpg-project-core</artifactId>
 			<version>${project.version}</version>
 			<type>jar</type>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
 		
 		<dependency>
