--- a/becpg-plm/becpg-plm-core/pom.xml
+++ b/becpg-plm/becpg-plm-core/pom.xml
@@ -6,7 +6,7 @@
 	    <version>23.4.2</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>23.4.2.22-SNAPSHOT</version>
+    <version>23.4.2.22</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-core</artifactId>
 	<packaging>jar</packaging>
@@ -171,6 +171,6 @@
 
 
   <scm>
-    <tag>23.4.2.21</tag>
+    <tag>23.4.2.22</tag>
   </scm>
 </project>
