--- a/becpg-project/becpg-project-core/pom.xml
+++ b/becpg-project/becpg-project-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.2</version>
 		<relativePath>../../</relativePath>
 	</parent>
- <version>23.4.2.24</version>
+ <version>23.4.2.25-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-project-core</artifactId>
 	<packaging>jar</packaging>
@@ -66,6 +66,6 @@
 
 
   <scm>
-    <tag>23.4.2.24</tag>
+    <tag>23.4.2.23</tag>
   </scm>
 </project>
