[Release][skip ci] prepare release 23.4.2.24

--- a/becpg-core/pom.xml
+++ b/becpg-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.2</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.4.2.24-SNAPSHOT</version>
+    <version>23.4.2.24</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-core</artifactId>
 	<packaging>jar</packaging>
@@ -118,6 +118,6 @@
 
 
   <scm>
-    <tag>23.4.2.23</tag>
+    <tag>23.4.2.24</tag>
   </scm>
 </project>
