Fix #28024 - [Bug] Add "List state" message

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
@@ -67,6 +67,7 @@ bcpg_bcpgmodel.property.bcpg_code.title                         = beCPG code
 bcpg_bcpgmodel.property.bcpg_color.title                        = Color
 bcpg_bcpgmodel.property.bcpg_depthLevel.title                   = Level
 bcpg_bcpgmodel.property.bcpg_endEffectivity.title               = End of effectivity
+bcpg_bcpgmodel.property.bcpg_entityDataListState.title          = List state
 bcpg_bcpgmodel.property.bcpg_entityLists.title                  = Entity data lists
 bcpg_bcpgmodel.property.bcpg_entityTplClassName.title           = Class type
 bcpg_bcpgmodel.property.bcpg_entityTplEnabled.title             = Active
