--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
@@ -155,6 +155,9 @@ listconstraint.bcpg_activityTypes.Formulation               = Formulation
 listconstraint.bcpg_activityTypes.Merge                     = Merge
 listconstraint.bcpg_activityTypes.Report                    = Report
 listconstraint.bcpg_activityTypes.State                     = State
+
+listconstraint.bcpg_entityDataListStates.ToValidate         = Unlocked
+listconstraint.bcpg_entityDataListStates.Valid              = Locked
 listconstraint.bcpg_externalLinkTarget._blank               = New tab
 listconstraint.bcpg_externalLinkTarget._self                = Current tab
 listconstraint.bcpg_nrRecurringDays.FRIDAY                  = Friday
