Fix #28024 - [Bug] Add entityList state messages

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
@@ -190,6 +190,8 @@ listconstraint.bcpg_documentStates.OnHold                   = On hold
 listconstraint.bcpg_documentStates.Refused                  = Refused
 listconstraint.bcpg_documentStates.ToValidate               = To validate
 listconstraint.bcpg_documentStates.Valid                    = Valid
+listconstraint.bcpg_entityDataListStates.ToValidate         = Unlocked
+listconstraint.bcpg_entityDataListStates.Valid              = Locked
 listconstraint.bcpg_externalLinkTarget._blank               = New tab
 listconstraint.bcpg_externalLinkTarget._self                = Current tab
 listconstraint.bcpg_nrRecurringDays.FRIDAY                  = Friday
