--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
@@ -79,7 +79,7 @@ bcpg_bcpgmodel.property.bcpg_charactName.title                  = Name
 bcpg_bcpgmodel.property.bcpg_code.title                         = beCPG code
 bcpg_bcpgmodel.property.bcpg_color.title                        = Color
 bcpg_bcpgmodel.property.bcpg_depthLevel.title                   = Level
-bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDelay.title   = Automatic ex\u00EEration (d)
+bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDelay.title   = Automatic expiration (d)
 bcpg_bcpgmodel.property.bcpg_docTypeCategory.title              = Category
 bcpg_bcpgmodel.property.bcpg_docTypeDestPath.title              = Path
 bcpg_bcpgmodel.property.bcpg_docTypeEffectivityType.title       = Effectivity type
