--- a/becpg-designer/becpg-designer-share/pom.xml
+++ b/becpg-designer/becpg-designer-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.2</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>23.4.2.27-SNAPSHOT</version>
+    <version>23.4.2.27</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-designer-share</artifactId>
 	<packaging>jar</packaging>
@@ -62,6 +62,6 @@
 
 
   <scm>
-    <tag>23.4.2.23</tag>
+    <tag>23.4.2.27</tag>
   </scm>
 </project>
