Fix #29327 - [Bug] Fix supplier account creation failure message

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -145,7 +145,7 @@ message.copy-datalist-to                      = Copy list '{0}' to...
 message.copy-datalist-to.notselected          = No list selected
 message.copy-shareable-links.success          = Links copied to clipboard
 message.create.please-wait                    = Please wait. Creation in progress...
-message.createSupplier.failure                = You do not have the rights to perform this operation
+message.createSupplier.failure                = Failed to create supplier account
 message.createSupplier.success                = User '{0}' associated to supplier
 message.delete-content.failure                = Error deleting content
 message.delete-content.success                = Content deleted with success
@@ -168,7 +168,7 @@ message.lock.success                          = Lock successfull
 message.lock.title                            = Lock item(s)
 message.multiple-quick-share                  = Link sharing on ({0} items): 
 message.multiple-quick-share-empty            = Please select files to share
-message.send-to-supplier.failure              = Cannot send to supplier
+message.send-to-supplier.failure              = Unable to send to supplier
 message.send-to-supplier.inprogress           = Send to supplier in progress
 message.simulate-entity.inprogress            = Simulation of entities in progress
 message.simulate-entity.success               = Successful simulation of entities
@@ -176,6 +176,7 @@ message.synchronize-entities.failure          = Could not synchronize entities
 message.synchronize-entities.please-wait      = Please wait. Entities being synchronized...
 message.synchronize-entities.please-wait-mail = Entities synchronization started, you will receive an email when it will be finished
 message.synchronize-entities.success          = Entities successfully synchronized
+message.too.many.items                        = Too many items selected ({0}). Please select 50 or fewer items.
 message.unlock.description                    = Are you sure you want to unlock the item(s) ?
 message.unlock.failure                        = Could not unlock item(s)
 message.unlock.success                        = Unlock successfull
@@ -184,7 +185,7 @@ message.update-permissions.failure            = Could not update permissions
 message.update-permissions.please-wait        = Please wait. Permissions being updated...
 message.update-permissions.success            = Permissions successfully updated
 message.update-supplier-account.description   = Are you sure you want to update the supplier account ?
-message.update-supplier-account.failure       = Supplier account update failure
+message.update-supplier-account.failure       = Failed to update supplier account
 message.update-supplier-account.success       = Supplier account update successfull
 message.update-supplier-account.title         = Supplier account update
 
