--- a/becpg-designer/becpg-designer-share/pom.xml
+++ b/becpg-designer/becpg-designer-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.2</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>23.4.2.28</version>
+    <version>23.4.2.29-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-designer-share</artifactId>
 	<packaging>jar</packaging>
