--- a/becpg-integration-runner/src/main/docker/becpg-db/becpg-db.cnf
+++ b/becpg-integration-runner/src/main/docker/becpg-db/becpg-db.cnf
@@ -9,19 +9,70 @@ lower_case_table_names=1
 character-set-server=utf8mb4
 collation-server=utf8mb4_general_ci
 
-# Memory settings for SMALL profile – 16 Go RAM totale – DB: 3.2 Go
+# =============================================================================
+# MySQL 8.4 Configuration - SMALL Profile
+# Container RAM: 3.2GB | Database Size: 3.2GB | Max Connections: ~30
+# =============================================================================
 
-innodb_buffer_pool_size = 2G
-innodb_buffer_pool_instances = 2
-innodb_log_file_size = 512M
-innodb_log_buffer_size = 128M
-innodb_flush_log_at_trx_commit = 2
-max_connections = 30
-table_open_cache = 4000
-tmp_table_size = 64M
-max_heap_table_size = 64M
-thread_cache_size = 50
-join_buffer_size = 2M
-sort_buffer_size = 2M
-read_rnd_buffer_size = 1M
+# Buffer Pool Configuration
+innodb_buffer_pool_size = 1536M           
+innodb_buffer_pool_instances = 2          
 
+# Redo Log Configuration (MySQL 8.0.30+)
+innodb_redo_log_capacity = 384M           
+           
+
+# Log Buffer
+innodb_log_buffer_size = 64M              
+
+# Connection Settings
+max_connections = 30                      
+thread_cache_size = 30                   
+
+# Query Optimization Buffers (per connection - keep small)
+join_buffer_size = 1M                     
+sort_buffer_size = 1M                     
+read_rnd_buffer_size = 512K            
+
+# Memory Tables
+tmp_table_size = 32M                     
+max_heap_table_size = 32M                 
+
+# Table Cache
+table_open_cache = 2000                   
+
+# Transaction & Locking
+transaction_isolation = READ-COMMITTED
+innodb_lock_wait_timeout = 20
+innodb_deadlock_detect = ON
+innodb_rollback_on_timeout = ON
+
+# InnoDB Performance Settings
+innodb_flush_log_at_trx_commit = 2        
+innodb_thread_concurrency = 0          
+innodb_read_io_threads = 2               
+innodb_write_io_threads = 2               
+
+# Network & Performance
+skip_name_resolve = 1
+performance_schema = ON
+
+# Memory-conscious optimizations
+innodb_stats_on_metadata = OFF            
+innodb_adaptive_hash_index = ON          
+innodb_change_buffering = all            
+
+# Reduced memory footprint settings
+query_cache_size = 0                      
+innodb_file_per_table = ON              
+innodb_open_files = 400                 
+
+# Monitoring (lightweight)
+slow_query_log = 1
+long_query_time = 2.0                    
+log_queries_not_using_indexes = 0        
+
+# Additional memory savings
+innodb_buffer_pool_dump_at_shutdown = OFF 
+innodb_buffer_pool_load_at_startup = OFF
+table_definition_cache = 400            
