[Perfs] Mysql jdbc url optimization

--- a/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
+++ b/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
@@ -6,7 +6,7 @@
 # JDBC
 #
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://becpg-db:3306/db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useServerPrepStmts=true&cachePrepStmts=true&prepStmtCacheSize=500&prepStmtCacheSqlLimit=4096&cacheResultSetMetadata=true&useLocalSessionState=true&rewriteBatchedStatements=true&cacheCallableStmts=true&connectTimeout=10000&socketTimeout=300000&autoReconnect=true&failOverReadOnly=false&maxReconnects=3&initialTimeout=2&useCursorFetch=true&defaultFetchSize=1000&allowMultiQueries=false&allowUrlInLocalInfile=false&autoDeserialize=false&allowLoadLocalInfile=false&useSSL=false&verifyServerCertificate=false
+db.url=jdbc:mysql://becpg-db:3306/db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useServerPrepStmts=true&cachePrepStmts=true&prepStmtCacheSize=250&prepStmtCacheSqlLimit=2048&cacheResultSetMetadata=true&useLocalSessionState=true&rewriteBatchedStatements=true&cacheCallableStmts=false&connectTimeout=10000&socketTimeout=300000&allowMultiQueries=false&allowUrlInLocalInfile=false&autoDeserialize=false&allowLoadLocalInfile=false&sslMode=REQUIRED&allowPublicKeyRetrieval=true&useCompression=false
 db.username=becpg
 db.password=becpg
 
