Fix #29467 - Add productCollection client and supplier status

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-model.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-model.properties
@@ -33,6 +33,12 @@ data.revisiontype.major      = Major
 data.revisiontype.minor      = Minor
 data.revisiontype.norevision = No revision
 
+status.client-archived               = Archived
+status.client-refused                = Refused
+status.client-simulation             = Simulation
+status.client-stopped                = Stopped
+status.client-tovalidate             = To Validate
+status.client-valid                  = Valid
 status.document-archived             = Archived
 status.document-mandatory-archived   = Archived
 status.document-mandatory-refused    = Refused
@@ -51,6 +57,18 @@ status.entity-simulation             = Simulation
 status.entity-stopped                = Stopped
 status.entity-tovalidate             = To Validate
 status.entity-valid                  = Valid
+status.productCollection-archived    = Archived
+status.productCollection-refused     = Refused
+status.productCollection-simulation  = Simulation
+status.productCollection-stopped     = Stopped
+status.productCollection-tovalidate  = To Validate
+status.productCollection-valid       = Valid
+status.supplier-archived             = Archived
+status.supplier-refused              = Refused
+status.supplier-simulation           = Simulation
+status.supplier-stopped              = Stopped
+status.supplier-tovalidate           = To Validate
+status.supplier-valid                = Valid
 
 type.bcpg_entityListItem = Entity list item
 type.bcpg_linkedValue    = Linked values
