InProgress #29487 - [Feature] Migrate to Alfresco 25.2

--- a/becpg-integration-runner/src/main/docker/becpg-solr/rerank/solrcore.properties
+++ b/becpg-integration-runner/src/main/docker/becpg-solr/rerank/solrcore.properties
@@ -239,11 +239,21 @@ solr.suggester.minSecsBetweenBuilds=3600
 #
 solr.request.content.compress=false
 
+#
 # When checking repo and index consistency, first transaction is compared in both Repository and Index repositories.
 # In order to get that initial transaction from database, 0-2000 range for txnId should be enough, but this parameter
 # can be used when initial transaction Id is greater than 2000.
 #
 solr.initial.transaction.range=0-2000
+
+
+# set it to true to allow custom d:content fields to be indexed.
+# N.B. At most one content field can be indexed for each document
+solr.enableIndexingCustomContent=false
+
+# Facet query limit when retrieving info for the stats (used in the acl transaction and index transaction reports
+# and fix)
+alfresco.stats.facetLimit=100
 
 
 # Backup
