--- a/becpg-core/pom.xml
+++ b/becpg-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>25.2.0</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>25.2.0.1-SNAPSHOT</version>
+    <version>25.2.0.1</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-core</artifactId>
 	<packaging>jar</packaging>
@@ -117,6 +117,6 @@
 
 
   <scm>
-    <tag>25.2.0.0</tag>
+    <tag>25.2.0.1</tag>
   </scm>
 </project>
