--- a/becpg-share/pom.xml
+++ b/becpg-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>25.2.0</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>25.2.0.1-SNAPSHOT</version>
+    <version>25.2.0.1</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-share</artifactId>
 	<packaging>jar</packaging>
@@ -83,6 +83,6 @@
 
 
   <scm>
-    <tag>25.2.0.0</tag>
+    <tag>25.2.0.1</tag>
   </scm>
 </project>
